# MiPAC

./: .buildinfo  .flake8  .gitattributes  .gitignore  .onedev-buildspec.yml  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CNAME  MANIFEST.in  OLD_CHANGELOG.md  README.md  README_JP.md  cliff.toml  doc_gen.py  genindex.html  index.html  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support_new_endpoint_request.md
.github/workflows/: code_quality.yml  doc_build.yml  labeler.yml  python-app.yml
_sources/: index.rst.txt
_static/: documentation_options.js
_static/css/: custom.css
compiler/: endpoints.py  errors.py  type.py  update_api_status.py
compiler/datas/: ayuskey_api.json  endpoints.json  errors.csv  removed-endpoints.json  support_status.md  v13_api.json
docs/: CNAME  conf.py  doc_builder.sh  index.rst  mipac.abc.rst  mipac.actions.rst  mipac.core.models.rst  mipac.core.rst  mipac.manager.admin.rst  mipac.manager.rst  mipac.models.rst  mipac.rst  mipac.types.rst  modules.rst  requirements.txt
en/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
is_number/: _version.py
ja/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
mipac/: __init__.py  _version.py  client.py  config.py  exception.py  file.py  http.py  util.py
utils/: mipactl.py  templates.py
(+350 files in other folders)
