[tool.black]
line-length = 99
extend-exclude = '''
(
_version.py
|endpoints.py
)
'''


[tool.pyright]
include = ["mipac"]
exclude = ["mipac/_version.py"]
venvPath = "."
venv = ".venv"

[tool.isort]
profile = "black"
line_length = 99

[build-system]
requires = ["setuptools", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 99

[tool.ruff.format]
exclude = ["mipac/_version.py"]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F403"]
